# gcloud-auth-rs

./: Cargo.toml  Readme.md
.github/workflows/: ci.yaml
src/: auth.rs  config.rs  main.rs
