[package]
name = "gcloud-auth-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.17", features = ["derive"] }
const_format = "0.2.33"
http-body-util = "0.1.2"
hyper = { version = "1.4.1", features = ["http1", "server"] }
hyper-util = { version = "0.1.9", features = ["tokio"] }
ini = "1.3.0"
jsonwebtoken = "9.3.0"
oneshot = "0.1.8"
open = "5.3.0"
regex = "1.11.0"
reqwest = { version = "0.12.7", features = ["json"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
sqlite = "0.36.1"
tokio = { version = "1.40.0", features = ["full"] }
url = "2.5.2"
